<resources>
    <string name="app_name">MyTravelJournal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Your Name</string>
    <string name="nav_header_subtitle">your.email@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about">About Us</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_add">Add trip</string>
    <string name="menu_edit">Edit trip</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_details">Details</string>

    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="version">Version 1.0.0</string>
    <string name="app_logo">App logo</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="select_theme">Select app theme</string>
    <string name="add_trip">Add trip</string>
    <string name="trip_picture">Trip picture</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="add_image_from_gallery">Add image from gallery</string>
    <string name="location">Location</string>
    <string name="edit">Edit</string>
    <string name="app_description">MyTravelJournal is an app that helps you keep your dearest memories close to you, as close as your pocket! Save your favourite trips using our app with just a few taps! I hope you enjoy using it as much as I did developing it!</string>
    <string name="phone_number">+40 751 196 995</string>
    <string name="github_link"><a href="https://github.com/robi-baceanu">github/robi-baceanu</a></string>
    <string name="linkedin_link"><a href="https://www.linkedin.com/in/robert-cosmin-b%C4%83ceanu-a10274254/">linkedin/RobertBaceanu</a></string>
    <string name="contact_details">Contact\ndetails</string>
    <string name="reach_out">Don\'t hesitate to reach out!</string>
</resources>