<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mytraveljournal.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_add"
            app:destination="@id/nav_add" />
        <action
            android:id="@+id/action_nav_home_to_nav_edit"
            app:destination="@id/nav_edit" />
        <action
            android:id="@+id/action_nav_home_to_nav_details"
            app:destination="@id/nav_details" />
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.mytraveljournal.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.mytraveljournal.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.mytraveljournal.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_add"
        android:name="com.example.mytraveljournal.ui.add.AddFragment"
        android:label="@string/menu_add"
        tools:layout="@layout/fragment_add" >
        <action
            android:id="@+id/action_nav_add_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_edit"
        android:name="com.example.mytraveljournal.ui.edit.EditFragment"
        android:label="@string/menu_edit"
        tools:layout="@layout/fragment_edit" >
        <action
            android:id="@+id/action_nav_edit_to_nav_home"
            app:destination="@id/nav_home" />
        <argument
            android:name="currentTrip"
            app:argType="com.example.mytraveljournal.data.Trip" />
    </fragment>

    <fragment
        android:id="@+id/nav_details"
        android:name="com.example.mytraveljournal.ui.details.DetailsFragment"
        android:label="@string/menu_details"
        tools:layout="@layout/fragment_details" >
        <action
            android:id="@+id/action_nav_details_to_nav_home"
            app:destination="@id/nav_home" />
        <argument
            android:name="currentTrip"
            app:argType="com.example.mytraveljournal.data.Trip" />
    </fragment>
</navigation>